SL summary UI changes

--- a/front-end/src/app/forms/sched-l/sched-l.component.html
+++ b/front-end/src/app/forms/sched-l/sched-l.component.html
@@ -384,17 +384,17 @@
                       </td>
                     </tr>  
                     <tr>
-                        <td width=50%>
+                        <td width=60%>
                           <div class="summary_text_level_1" >
                             1. RECEIPTS
                           </div>
                         </td>
-                        <td width=25%>
+                        <td width=20%>
                           <div class="summary_text_amt_level_1" >
                             Current Period
                           </div>
                         </td>
-                        <td width=25%>
+                        <td width=20%>
                           <div class="summary_text_amt_level_1" >
                             Calendar Year-to-Date
                           </div>
@@ -402,7 +402,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               1a. Itemized Receipts From Persons
                           </div>
                         </td>
@@ -419,7 +419,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               1b. Unitemized Receipts From Persons
                           </div>
                         </td>
@@ -436,7 +436,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               1c. Total Receipts From Persons
                           </div>
                         </td>
@@ -504,7 +504,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               4(a) Voter Registration DISBURSEMENTS
                           </div>
                         </td>
@@ -521,7 +521,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               4(b) Voter ID DISBURSEMENTS
                           </div>
                         </td>
@@ -538,7 +538,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               4(c). GOTV DISBURSEMENTS
                           </div>
                         </td>
@@ -555,7 +555,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               4(d). Generic Campaign DISBURSEMENTS
                           </div>
                         </td>
@@ -606,7 +606,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               7. CASH ON HAND (Beginning)
                           </div>
                         </td>
@@ -623,7 +623,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               8. RECEIPTS
                           </div>
                         </td>
@@ -640,7 +640,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               9. SUBTOTAL
                           </div>
                         </td>
@@ -657,7 +657,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div class="summary_text_level_3" >
+                          <div class="summary_text_level_3 summary_level_3" >
                               10. DISBURSEMENTS
                           </div>
                         </td>
