actions buttons for H1, H2 and H3 Other tab

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -197,7 +197,7 @@
         </app-debt-summary>
 
         <app-sched-h1
-          *ngIf="scheduleType === 'sched_h1'"
+          [hidden]="scheduleType !== 'sched_h1'"
           [scheduleAction]="scheduleAction"
           [scheduleType]="scheduleType"
           (status)="onNotify($event)"
