--- a/front-end/src/app/forms/sched-h6/sched-h6.component.html
+++ b/front-end/src/app/forms/sched-h6/sched-h6.component.html
@@ -161,8 +161,7 @@
                 </thead>
                 <tbody>
                     <ng-container *ngFor="let item of schedH6sModel | paginate: tableConfig">
-                        <tr *ngIf="item.memo_code !=='X' || item.arrow_dir ==='show'"
-                         [ngStyle]="{'background-color': item.memo_code !=='X' ? '' : '#D9EDF6'}">
+                        <tr>
                         <td>
                             <input type="checkbox" (click)="checkForMultiChecked($event)">
                         </td>
@@ -208,7 +207,59 @@
                                         <i class="fas fa-print"></i> Print
                                     </button>
                                     <button class="dropdown-item" (click)="cloneTransaction(item)"><i class="fas fa-copy"></i> Clone</button>
-                                    <button class="dropdown-item" (click)="trashTransaction(item)"><i class="fas fa-trash" ></i> Trash</button>
+                                    <button *ngIf="checkIfTrashable(item)" class="dropdown-item" (click)="trashTransaction(item)"><i class="fas fa-trash" ></i> Trash</button>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+
+                    <tr [ngStyle]="{'background-color': '#D9EDF6'}" *ngFor="let itemChild of item.child;">
+                        <td>
+                            <input type="checkbox" (click)="checkForMultiChecked($event)">
+                        </td>
+                        <td>
+                            <div class="row td-arrow">
+                              {{ itemChild.entity_type == 'IND' ?
+                                itemChild.first_name + ' ' + item.last_name :
+                                itemChild.entity_name
+                              }}
+                              <div >
+                                  <i *ngIf="itemChild.arrow_dir === 'down'" class="fas fa-angle-down amend-arrow" (click)="clickArrow(item)"></i>
+                                  <i *ngIf="itemChild.arrow_dir === 'up'" class="fas fa-angle-up amend-arrow" (click)="clickArrow(item)"></i>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div *ngIf="itemChild.activity_event_type == 'GC'">Generic Campaign</div>
+                            <div *ngIf="itemChild.activity_event_type == 'GO'">GOTV</div>
+                            <div *ngIf="itemChild.activity_event_type == 'VI'">Voter ID</div>
+                            <div *ngIf="itemChild.activity_event_type == 'VR'">Voter Registration</div>
+                          </td>
+                        <td>{{ itemChild.expenditure_date | date: 'MM/dd/yyyy' }}</td>
+                        <td>{{ itemChild.expenditure_purpose }}</td>
+                        <td>{{ itemChild.fed_share_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+                        <td>{{ itemChild.levin_share | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+                        <td>
+                            <div *ngIf="itemChild.memo_code == 'X'"><input type="checkbox" checked onclick="return false;">Memo</div>
+                            <div *ngIf="itemChild.memo_code != 'X'"><input type="checkbox" onclick="return false;">Memo</div>
+                        </td>
+
+                        <td class="bulk_action" >
+                            <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+
+                                <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                                    <i class="ellipsis-icon"></i>
+                                </button>
+
+                                <div id="sched-h6__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                                    <button class="dropdown-item" (click)="editTransaction(itemChild)">
+                                        <i class="fas fa-edit"></i> Edit
+                                    </button>
+                                    <button class="dropdown-item">
+                                        <i class="fas fa-print"></i> Print
+                                    </button>
+                                    <button class="dropdown-item" (click)="cloneTransaction(itemChild)"><i class="fas fa-copy"></i> Clone</button>
+                                    <button class="dropdown-item" (click)="trashTransaction(itemChild)"><i class="fas fa-trash" ></i> Trash</button>
                                 </div>
                             </div>
                         </td>
