Deletes on transaction tables and edits on Hs

--- a/front-end/src/app/forms/sched-c1/sched-c1.component.html
+++ b/front-end/src/app/forms/sched-c1/sched-c1.component.html
@@ -108,7 +108,7 @@
                 <span class="sr-only">Click here for more information</span>
               </div>
             </label>
-            <ng-select #stateSelect [items]="states" class="forms__select" [formControlName]="'state'"
+            <ng-select #stateSelect [items]="states" class="forms__select disable-arrow" [formControlName]="'state'"
               bindValue="state_code" bindLabel="state_code" [selectOnTab]="true" [ngClass]="
                 c1Form.get('state')?.invalid &&
                 (c1Form.touched || c1Form.dirty)
