--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -355,7 +355,7 @@
       <div *ngIf="scheduleAction !== editScheduleAction" class="grid-row">
         <div class="grid-row__col grid-row__col--12">
           <div class="forms__btn-container">
-            <button class="btn btn-primary btn-right" type="button" (click)="saveAndAddMore()">
+            <button class="btn btn-primary btn-right" type="button" [disabled]="saveAndAddDisabled" (click)="saveAndAddMore()">
               Save & Add
             </button>
           </div>
