fixes on loans and Edits for Sched L on Transaction table

--- a/front-end/src/app/forms/sched-c/endorser/endorser.component.html
+++ b/front-end/src/app/forms/sched-c/endorser/endorser.component.html
@@ -293,7 +293,7 @@
               <button class="btn btn-secondary btn-right" type="button"  (click)="saveEndorser(false)">
                 Save
               </button>
-              <button class="btn btn-secondary btn-right" type="button" (click)=saveEndorser(true)>
+              <button *ngIf="scheduleAction !== 'edit'" class="btn btn-secondary btn-right" type="button" (click)=saveEndorser(true)>
                 Add Endorsers
               </button>
             </div>
