--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
@@ -71,7 +71,7 @@
           <td [@fadeInOut] [ngClass]="(ln.entity_type === 'ORG') ? 'parent': ''"
             (click)="ln.entity_type === 'ORG' ? ln.toggleChild = !ln.toggleChild : ''" *ngIf="isColumnVisible('name')">
             {{ln.name}}
-            <div *ngIf="ln.entity_type === 'ORG'" class="align_right arrow"
+            <div *ngIf="ln.entity_type === 'ORG' && (ln.hasC1 || ln.hasC2)" class="align_right arrow"
               [ngClass]="ln.toggleChild ? 'arrow-top' : 'arrow-bottom'"></div>
           </td>
           <td [@fadeInOut] *ngIf="isColumnVisible('loan_amount_original')">
@@ -109,7 +109,7 @@
             </div>
           </td>
         </tr>
-        <tr *ngIf="ln.entity_type === 'ORG'" [ngbCollapse]="ln.entity_type === 'ORG' ? !ln.toggleChild: ''"
+        <tr *ngIf="ln.entity_type === 'ORG' && ln.hasC1" [ngbCollapse]="ln.entity_type === 'ORG' ? !ln.toggleChild: ''"
           class="child-bg">
           <td style="padding-left: 70px;" colspan="6">Schedule C1</td>
           <td>
@@ -128,7 +128,7 @@
             </div>
           </td>
         </tr>
-        <tr *ngIf="ln.entity_type === 'ORG'" [ngbCollapse]="ln.entity_type === 'ORG' ? !ln.toggleChild: ''"
+        <tr *ngIf="ln.entity_type === 'ORG' && ln.hasC2" [ngbCollapse]="ln.entity_type === 'ORG' ? !ln.toggleChild: ''"
           class="child-bg">
           <td style="padding-left: 70px;" colspan="6">Endorsers</td>
           <td>
