Fix ViewContacts showing warning even after saving the contact Fix warning message when form touched Temp alert for help and notification

--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -408,7 +408,7 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
             <div class="forms__btn-container">
-              <button class="btn btn-previous btn-left" type="button"  (click)= "(frmContact.touched || frmContact.dirty) ? cancelStepWithWarning() : cancelStep() ">
+              <button class="btn btn-previous btn-left" type="button"  (click)= "(frmContact.dirty) ? cancelStepWithWarning() : cancelStep() ">
                 Cancel
               </button>
               
