--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -85,11 +85,19 @@
       </div>
 
       <div class="form__step" [hidden]="step !== 'step_3'">
-        <div [hidden]="transactionType === 'ALLOC_H4_TYPES' || transactionType === 'ALLOC_H4_SUM'
-         || transactionType === 'ALLOC_H6_TYPES' || transactionType === 'ALLOC_H6_SUM'
-         || transactionType === 'LA_ENTRY' || transactionType === 'LB_ENTRY' 
-         || transactionType === 'LA_SUM' || transactionType === 'LB_SUM'
-         || transactionType === 'L_SUM'">
+        <div
+          [hidden]="
+            transactionType === 'ALLOC_H4_TYPES' ||
+            transactionType === 'ALLOC_H4_SUM' ||
+            transactionType === 'ALLOC_H6_TYPES' ||
+            transactionType === 'ALLOC_H6_SUM' ||
+            transactionType === 'LA_ENTRY' ||
+            transactionType === 'LB_ENTRY' ||
+            transactionType === 'LA_SUM' ||
+            transactionType === 'LB_SUM' ||
+            transactionType === 'L_SUM'
+          "
+        >
           <f3x-individual-receipt
             [hidden]="
               scheduleType !== 'sched_a' &&
@@ -97,7 +105,7 @@
               scheduleType !== 'sched_d' &&
               scheduleType !== 'sched_h4' &&
               scheduleType !== 'sched_h6' &&
-              scheduleType !== 'sched_L' 
+              scheduleType !== 'sched_L'
             "
             [transactionTypeText]="transactionTypeText"
             [transactionType]="transactionType"
@@ -117,6 +125,7 @@
           >
           </app-sched-e>
         </div>
+        <!-- This is for Sched F payment on a Debt.  Not the same as sched_f_core -->
         <app-sched-f
           [hidden]="scheduleType !== 'sched_f'"
           [formType]="'3X'"
@@ -128,6 +137,17 @@
           (status)="onNotify($event)"
         >
         </app-sched-f>
+        <!-- This component is for the 'core' Schedule F, a different component handles sched F payment -->
+        <app-sched-f-core
+          *ngIf="scheduleType === 'sched_f_core'"
+          [formType]="'3X'"
+          [transactionTypeText]="transactionTypeTextSchedFCore"
+          [transactionType]="transactionTypeSchedFCore"
+          [scheduleAction]="scheduleFCoreAction"
+          [scheduleType]="scheduleType"
+          (status)="onNotify($event)"
+        >
+        </app-sched-f-core>
 
         <app-sched-c-loans
           *ngIf="scheduleType === 'sched_c'"
@@ -138,26 +158,25 @@
         >
         </app-sched-c-loans>
 
-        <app-loanendorser 
+        <app-loanendorser
           *ngIf="scheduleType === 'sched_c_en'"
           [formType]="'3X'"
           [scheduleAction]="scheduleCAction"
           [transactionDetail]="transactionDetailSchedC"
-          (status)="onNotify($event)">
+          (status)="onNotify($event)"
+        >
         </app-loanendorser>
-      
+
         <app-loanendorsersummary
           *ngIf="scheduleType === 'sched_c_es'"
           [formType]="'3X'"
           [scheduleAction]="scheduleCAction"
           [transactionDetail]="transactionDetailSchedC"
-          (status)="onNotify($event)">
+          (status)="onNotify($event)"
+        >
         </app-loanendorsersummary>
-        
-        <app-loansummary 
-          *ngIf="scheduleType === 'sched_c_ls'"
-          [formType]="'3X'"
-          (status)="onNotify($event)">          
+
+        <app-loansummary *ngIf="scheduleType === 'sched_c_ls'" [formType]="'3X'" (status)="onNotify($event)">
         </app-loansummary>
 
         <app-loanpayment
@@ -172,7 +191,7 @@
         <app-sched-c1
           *ngIf="scheduleType === 'sched_c1'"
           [forceChangeDetection]="forceChangeDetectionC1"
-          [transactionDetail]="transactionDetailSchedC" 
+          [transactionDetail]="transactionDetailSchedC"
           [scheduleAction]="scheduleAction"
           (status)="onNotify($event)"
         >
@@ -193,7 +212,8 @@
           [forceChangeDetection]="forceChangeDetectionDebtSummary"
           [transactionType]="transactionTypeDebtSummary"
           [transactionTypeText]="transactionTypeTextDebtSummary"
-          (status)="onNotify($event)">          
+          (status)="onNotify($event)"
+        >
         </app-debt-summary>
 
         <app-sched-h1
@@ -249,9 +269,13 @@
         >
         </app-sched-h6>
         <app-sched-l
-          [hidden]="transactionType !== 'LA_ENTRY' && transactionType !== 'LB_ENTRY' && 
-          transactionType !== 'LA_SUM' && transactionType !== 'LB_SUM'
-          && transactionType !== 'L_SUM'"
+          [hidden]="
+            transactionType !== 'LA_ENTRY' &&
+            transactionType !== 'LB_ENTRY' &&
+            transactionType !== 'LA_SUM' &&
+            transactionType !== 'LB_SUM' &&
+            transactionType !== 'L_SUM'
+          "
           [transactionTypeText]="transactionTypeText"
           [transactionType]="transactionType"
           [scheduleAction]="scheduleAction"
@@ -283,14 +307,13 @@
       <!-- <div class="form_step" [hidden]="step !== 'loansummary'" *ngIf="step ==='loansummary'">
         <app-loansummary> </app-loansummary>
       </div> -->
-      
+
       <!-- <div class="form_step" [hidden]="step !== 'loanpayment'" *ngIf="step === 'loanpayment'">
         <app-loanpayment> </app-loanpayment>
       </div> -->
       <div class="form_step" [hidden]="step !== 'loanreceipt'">
         <app-loanreceipt> </app-loanreceipt>
       </div>
-
     </div>
   </div>
   <!-- ./form__container -->
