--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -948,7 +948,8 @@
               <td [@fadeInOut] *ngIf="isColumnVisible('eventId')">{{trx.eventId}}</td>
               <td>
                 <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
-                  <span [title]="!trx.iseditable ? 'This transaction cannot be restored because it is auto generated.': ''">
+                  <span [title]="!trx.iseditable ? 'This transaction cannot be restored because a linked transaction is also in deleted state. 
+                  Please restore the linked transaction first.': ''">
                     <button class="btn btn-sm btn-primary" [disabled]="!trx.iseditable" (click)="restoreTransaction(trx)">
                       <i class="undo-icon"></i>
                     </button>
@@ -972,10 +973,15 @@
                       class="dropdown-item" (click)="cloneTransaction(trx)">
                         <i class="far fa-copy"></i> Clone
                       </button>
-                     <button [disabled]="!trx.iseditable" *ngIf="checkIfTrashable()" class="dropdown-item"
-                        (click)="trashTransaction(trx)">
-                        <i class="trash-icon"></i> Trash
-                      </button>
+                      <span [title]="(((trx.scheduleType === 'Schedule H1' || trx.scheduleType === 'Schedule H2') && trx.isTrashable !== undefined)? !trx.isTrashable : !trx.iseditable) 
+                      ? 'This transaction cannot be deleted because of a linked transaction.': ''">
+                        <button [disabled]="((trx.scheduleType === 'Schedule H1' || trx.scheduleType === 'Schedule H2') && trx.isTrashable !== undefined) ? !trx.isTrashable : !trx.iseditable" 
+                        *ngIf="checkIfTrashable()" class="dropdown-item"
+                            (click)="trashTransaction(trx)">
+                            <i class="trash-icon"></i> Trash
+                        </button> 
+                      </span>
+                     
                     </div>
                   </div>
                 </div>
