--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -61,10 +61,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" draggable="false" ng-href="#" (click)="notImplemented()">Help</a>
+              <a class="nav-link" draggable="false" [routerLink]="['/help']">Help</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" draggable="false" ng-href="#" (click)="notImplemented()">
+              <a class="nav-link" draggable="false" [routerLink]="['/help']">
                 <i class="notifications-icon icon"></i>
                 Notifications
               </a>
