update contact edit name value & temporal disable “Type” drop down list

--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
@@ -154,3 +154,19 @@
     }
   }
 }
+
+.ng-select.disabled.ng-select .ng-select-container{
+  background-color: #e9ecef;
+}
+
+.ng-select.disabled .ng-arrow-wrapper .ng-arrow {
+  display: none;
+}
+
+.ng-select.disabled ng-dropdown-panel {
+  display: none;
+}
+
+.ng-select.disabled .ng-clear-wrapper {
+  display: none;
+}
