debt payment amount exceeded validation

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -255,6 +255,16 @@
                               coverage period only. -->
                           </div>
                         </ng-container>
+
+
+                        <ng-container *ngIf="frmIndividualReceipt.get(col?.name).errors">
+                          <div class="text-error text-left"
+                            *ngIf="frmIndividualReceipt.get(col?.name).errors?.amountExceeded">
+                            Expenditure amount exceeds outstanding loan amount
+                          </div>
+                        </ng-container>
+
+
                       </div>
                     </ng-container>
                     <ng-container *ngIf="col?.type === 'checkbox'">
