--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -26,6 +26,7 @@
             <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container>
             <ng-container *ngIf="scheduleAction === editScheduleAction && !cloned"> / Edit </ng-container>
             <ng-container *ngIf="scheduleAction === editScheduleAction && cloned"> / Clone </ng-container>
+            <ng-container *ngIf="scheduleAction === viewScheduleAction"> / View </ng-container>
           </h2>
         </div>
         <div class="float-right" ngbDropdown>
@@ -563,9 +564,12 @@
                       type="button" (click)="returnToParent(editScheduleAction)">
                       Cancel
                     </button>
-                    <button class="btn btn-secondary btn-right" (click)="saveOnly()">
+                    <button *ngIf="scheduleAction !== viewScheduleAction" class="btn btn-secondary btn-right" (click)="saveOnly()">
                       Save &amp; Add Transaction
                     </button>
+                    <div *ngIf="scheduleAction === viewScheduleAction">
+                      <button type="button" class="btn btn-outline-dark btn-right" (click)="viewTransactions()">Close</button>
+                    </div>
                     <a *ngIf="subTransactionInfo?.isParent === false" class="btn btn-primary btn-right"
                       (click)="saveAndReturnToParent()">
                       Save &amp; Return to {{ subTransactionInfo.transactionTypeDescription }}
