--- a/front-end/src/app/forms/sched-h4/sched-h4.component.html
+++ b/front-end/src/app/forms/sched-h4/sched-h4.component.html
@@ -61,8 +61,8 @@
             <tbody>
               <tr>               
                 <td class="summary_text_level_3">
-                  <input type="radio" formControlName="type" value="ALLOC_EXP" id="opt1" (click)="selectTypeChange($event)">
-                  <label for="opt1">Allocated Payment</label>
+                  <input type="radio" formControlName="type" value="ALLOC_EXP" id="h4Opt1" (click)="selectTypeChange($event)">
+                  <label for="h4Opt1">Allocated Payment</label>
                   <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                       tooltipClass="form-tooltip">
                       <i class="info-icon" aria-hidden="true"></i>
@@ -72,8 +72,8 @@
               </tr>
               <tr>                
                 <td class="summary_text_level_3">
-                  <input type="radio" formControlName="type" value="ALLOC_EXP_CC_PAY" id="opt2" (click)="selectTypeChange($event)">
-                  <label for="opt2">Allocated Credit Card Payment</label>
+                  <input type="radio" formControlName="type" value="ALLOC_EXP_CC_PAY" id="h4Opt2" (click)="selectTypeChange($event)">
+                  <label for="h4Opt2">Allocated Credit Card Payment</label>
                   <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                       tooltipClass="form-tooltip">
                       <i class="info-icon" aria-hidden="true"></i>
@@ -83,8 +83,8 @@
               </tr>
               <tr>                
                 <td class="summary_text_level_3">                
-                  <input type="radio" formControlName="type" value="ALLOC_EXP_STAF_REIM" id="opt3" (click)="selectTypeChange($event)"> 
-                  <label for="opt3">Allocated Staff Reimbusement</label>
+                  <input type="radio" formControlName="type" value="ALLOC_EXP_STAF_REIM" id="h4Opt3" (click)="selectTypeChange($event)">
+                  <label for="h4Opt3">Allocated Staff Reimbusement</label>
                   <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                       tooltipClass="form-tooltip">
                       <i class="info-icon" aria-hidden="true"></i>
@@ -94,8 +94,8 @@
               </tr>
               <tr>                
                 <td class="summary_text_level_3">
-                  <input type="radio" formControlName="type" value="ALLOC_EXP_PMT_TO_PROL" id="opt4" (click)="selectTypeChange($event)">
-                  <label for="opt4">Allocated Payroll</label>
+                  <input type="radio" formControlName="type" value="ALLOC_EXP_PMT_TO_PROL" id="h4Opt4" (click)="selectTypeChange($event)">
+                  <label for="h4Opt4">Allocated Payroll</label>
                   <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                       tooltipClass="form-tooltip">
                       <i class="info-icon" aria-hidden="true"></i>
@@ -105,8 +105,8 @@
               </tr>
               <tr>                
                 <td class="summary_text_level_3">
-                  <input type="radio" formControlName="type" value="ALLOC_EXP_VOID" id="opt5" (click)="selectTypeChange($event)">
-                  <label for="opt5">Void of Allocated Expenditure</label>
+                  <input type="radio" formControlName="type" value="ALLOC_EXP_VOID" id="h4Opt5" (click)="selectTypeChange($event)">
+                  <label for="h4Opt5">Void of Allocated Expenditure</label>
                   <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                       tooltipClass="form-tooltip">
                       <i class="info-icon" aria-hidden="true"></i>
