--- a/front-end/src/app/forms/sched-l/sched-l.component.scss
+++ b/front-end/src/app/forms/sched-l/sched-l.component.scss
@@ -396,3 +396,61 @@ table td, table th
 {
   padding: 0; /* 'cellpadding' equivalent */
 }
+
+.parent:hover{
+  cursor: pointer !important;
+}
+
+.child-bg {
+  padding-left: 3rem;
+  background-color: #D9EDF6!important;
+  font-style: italic;
+}
+
+/* arrow common style */
+ .arrow {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  margin-top:  0.4rem;
+  border-top: 0.2rem solid #112E51;
+  border-right: 0.2rem solid #112E51;
+  margin-right: 1rem;
+}
+.arrow-top {
+  transform: rotate(-45deg);
+}
+.arrow-right {
+  transform: rotate(45deg);
+}
+.arrow-bottom {
+  transform: rotate(135deg);
+}
+.arrow-left {
+  transform: rotate(-135deg);
+}
+.arrow-top-narrow {
+  transform: rotate(-45deg) skew(-15deg, -15deg);
+}
+.arrow-top-wide {
+  transform: rotate(-45deg) skew(7deg, 7deg);
+}
+.arrow-top-left {
+  transform: rotate(-90deg) skew(-10deg, -10deg);
+}
+.arrow-top-right {
+  transform: rotate(0) skew(-10deg, -10deg);
+}
+.arrow-bottom-left {
+  transform: rotate(180deg) skew(-10deg, -10deg);
+}
+.arrow-bottom-right {
+  transform: rotate(90deg) skew(-10deg, -10deg);
+}
+
+.width-100 {
+  width: 100%;
+}
+.width-25 {
+  width: 25%;
+}
