--- a/front-end/src/app/forms/sched-l/sched-l.component.html
+++ b/front-end/src/app/forms/sched-l/sched-l.component.html
@@ -304,14 +304,17 @@
                       {{ trx.levin_account_name }}
                     </div>
                   </td>
-                  <td [ngClass]="trx.child ? 'parent': ''" 
+
+                  
+
+                  <td [ngClass]="trx.child.length > 0 ? 'parent': ''" 
                   (click)="trx.child? trx.toggleChild = !trx.toggleChild: ''">
                       <div class="row td-arrow">
                         {{ trx.entity_type == 'IND' ?
                             trx.first_name + ' ' + trx.last_name :
                             trx.entity_name
                         }}
-                        &nbsp;&nbsp;<div *ngIf="trx.child" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-bottom' : 'arrow-top'"></div>
+                        &nbsp;&nbsp;<div *ngIf="trx.child.length > 0" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-bottom' : 'arrow-top'"></div>
                       <div >
                         <i *ngIf="trx.arrow_dir === 'down'" class="fas fa-angle-down amend-arrow" (click)="clickArrow(trx)"></i>
                         <i *ngIf="trx.arrow_dir === 'up'" class="fas fa-angle-up amend-arrow" (click)="clickArrow(trx)"></i>
@@ -342,16 +345,14 @@
                               <button class="dropdown-item" (click)="printTransaction(trx)">
                                   <i class="fas fa-print"></i> Print
                               </button>
-                              <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
-                              <button class="dropdown-item">
-                                  <i class="fas fa-trash"></i> Trash
-                              </button>
+                              <button class="dropdown-item" (click)="cloneTransaction(trx)"><i class="fas fa-copy"></i> Clone</button>
+                              <button *ngIf="checkIfTrashable(trx)" class="dropdown-item" (click)="trashTransaction(trx)"><i class="fas fa-trash" ></i> Trash</button>
                           </div>
                       </div>
                   </td>
                   
               </tr>
-              <tr [ngbCollapse]="trx.child? !trx.toggleChild: ''" *ngFor="let trxChild of trx.child;" class="child-bg">
+              <tr [ngbCollapse]="trx.child.length > 0? !trx.toggleChild: ''" *ngFor="let trxChild of trx.child;" class="child-bg">
                 <td>
                   <input type="checkbox" (click)="checkForMultiChecked($event)">
                 </td>
@@ -401,10 +402,8 @@
                             <button class="dropdown-item">
                                 <i class="fas fa-print"></i> Print
                             </button>
-                            <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
-                            <button class="dropdown-item">
-                                <i class="fas fa-trash"></i> Trash
-                            </button>
+                            <button class="dropdown-item" (click)="cloneTransaction(trxChild)"><i class="fas fa-copy"></i> Clone</button>
+                            <button *ngIf="checkIfTrashable(trxChild)" class="dropdown-item" (click)="trashTransaction(trxChild)"><i class="fas fa-trash" ></i> Trash</button>
                         </div>
                     </div>
                 </td>
