Fne all satheesh sprint26 (#1853)
* SL Changes

* Schedule L - Child transactions disabled Levin Account Name

* SL Summary Changes

* SL Summary changes - filter by Levin Account

* fixed SL Summary styles

* SL summary UI changes

* fixed pre-population of purpose description for Individual receipts

* Show Levin sub transaction types in Title

* fixed SL aggregate bug while editing a transaction

* SL parent / child

* SL Clone & Trash

* SL summary changes

--- a/front-end/src/app/forms/sched-l/sched-l.component.html
+++ b/front-end/src/app/forms/sched-l/sched-l.component.html
@@ -501,12 +501,12 @@
                         </td>
                         <td>
                           <div class="summary_text_amt_level_3" >
-                            {{ lSum.total_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                            {{ lSum.itemized_non_itemized_combined | currency:'USD':'symbol-narrow':'1.2-2'}}
                           </div>
                         </td>  
                         <td>
                           <div class="summary_text_amt_level_3" >
-                              {{ lSum.total_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                              {{ lSum.itemized_non_itemized_combined_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
                           </div>
                         </td>  
                       </tr>
@@ -637,12 +637,12 @@
                         </td>
                         <td>
                           <div class="summary_text_amt_level_1" >
-                            {{ lSum.total_disbursement_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                            {{ lSum.line4_subtotal | currency:'USD':'symbol-narrow':'1.2-2'}}
                           </div>
                         </td>  
                         <td>
                           <div class="summary_text_amt_level_1" >
-                              {{ lSum.total_disbursement_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                              {{ lSum.line4_subtotal_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
                           </div>
                         </td>  
                       </tr>
@@ -722,12 +722,12 @@
                         </td>
                         <td>
                           <div class="summary_text_amt_level_3" >
-                            {{ lSum.line4_subtotal | currency:'USD':'symbol-narrow':'1.2-2'}}
+                            {{ lSum.subtotal_report | currency:'USD':'symbol-narrow':'1.2-2'}}
                           </div>
                         </td>  
                         <td>
                           <div class="summary_text_amt_level_3" >
-                              {{ lSum.line4_subtotal_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                              {{ lSum.subtotal_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
                           </div>
                         </td>  
                       </tr>
