add trash parent/child transaction for h4/h6 summary page

--- a/front-end/src/app/forms/sched-h6/sched-h6.component.html
+++ b/front-end/src/app/forms/sched-h6/sched-h6.component.html
@@ -207,7 +207,7 @@
                                         <i class="fas fa-print"></i> Print
                                     </button>
                                     <button class="dropdown-item" (click)="cloneTransaction(item)"><i class="fas fa-copy"></i> Clone</button>
-                                    <button *ngIf="checkIfTrashable(item)" class="dropdown-item" (click)="trashTransaction(item)"><i class="fas fa-trash" ></i> Trash</button>
+                                    <button class="dropdown-item" (click)="trashTransaction(item)"><i class="fas fa-trash" ></i> Trash</button>
                                 </div>
                             </div>
                         </td>
