remove 'Previous' buttton from view page

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -562,7 +562,7 @@
                 </div>
                 <ng-template #createActions>
                   <div *ngIf="!isShedH4OrH6TransactionType(transactionType)">
-                    <button *ngIf="!subTransactionInfo || subTransactionInfo?.isParent" class="btn btn-previous btn-left" type="button"
+                    <button *ngIf="(!subTransactionInfo || subTransactionInfo?.isParent) && (scheduleAction !== viewScheduleAction)" class="btn btn-previous btn-left" type="button"
                       (click)="previousStep()">
                       Previous
                     </button>
