--- a/front-end/src/app/forms/sched-l/sched-l.component.html
+++ b/front-end/src/app/forms/sched-l/sched-l.component.html
@@ -314,7 +314,7 @@
                             trx.first_name + ' ' + trx.last_name :
                             trx.entity_name
                         }}
-                        &nbsp;&nbsp;<div *ngIf="trx.child.length > 0" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-bottom' : 'arrow-top'"></div>
+                        &nbsp;&nbsp;<div *ngIf="trx.child.length > 0" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-top' : 'arrow-bottom'"></div>
                       <div >
                         <i *ngIf="trx.arrow_dir === 'down'" class="fas fa-angle-down amend-arrow" (click)="clickArrow(trx)"></i>
                         <i *ngIf="trx.arrow_dir === 'up'" class="fas fa-angle-up amend-arrow" (click)="clickArrow(trx)"></i>
