--- a/front-end/src/app/forms/form-3x/sched-e/sched-e/sched-e.component.html
+++ b/front-end/src/app/forms/form-3x/sched-e/sched-e/sched-e.component.html
@@ -615,7 +615,7 @@
                   <button class="btn btn-secondary btn-right" (click)="updateOnly()">
                     Save
                   </button>
-                  <a *ngIf="subTransactionInfo?.isParent === false" class="btn btn-primary btn-right"
+                  <a *ngIf="subTransactionInfo?.isParent === false && _transactionCategory === 'loans-and-debts'" class="btn btn-primary btn-right"
                     (click)="saveAndReturnToParent()">
                     Return to {{ subTransactionInfo.transactionTypeDescription }}
                   </a>
